# 10_minute_mail_bot

./: .env_example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: main.py
src/common/mail_client/: __init__.py  base.py
src/core/: __init__.py  settings.py
src/database/markers/: redis.py
src/database/redis/: __init__.py  redis_connect.py
src/database/schemas/: __init__.py  user_schema.py
src/filters/: __init__.py  mail_filters.py
src/fsm/: __init__.py  mail_fsm.py
src/handlers/users/: __init__.py  help_handler.py  mail_handlers.py  routers.py  start_handler.py
src/keyboards/: __init__.py  help_keyboard.py  start_keyboard.py
src/keyboards/buttons/: __init__.py  help_button.py
src/mail_client/: __init__.py  client.py  client_session.py
