[tool.poetry]
name = "10-minute-mail-bot"
version = "0.1.0"
description = ""
authors = ["IlyaGrebenschikov  <ilushagr22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.4.1"
email-validator = "^2.1.1"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
